build: configure container registry in docker-compose
- Add configuration for containerregistrymanagementclient to docker-compose/vanity.yaml

Signed-off-by: Jimmy Chuang <ogre0403@gmail.com>

--- a/docker-compose/vanity.yaml
+++ b/docker-compose/vanity.yaml
@@ -39,3 +39,6 @@ paths:
     /aes/littlebellmanagementclient:
         repo: https://<GITHUB_PAT>@github.com/trusted-cloud/littlebellmanagementclient
         vcs: git
+    /aes/containerregistrymanagementclient:
+        repo: https://<GITHUB_PAT>@github.com/trusted-cloud/containerregistrymanagementclient
+        vcs: git
