--- a/docker-compose/Dockerfile
+++ b/docker-compose/Dockerfile
@@ -5,21 +5,29 @@ WORKDIR /app
 
 RUN apk add git make
 
+
 RUN git clone https://github.com/goproxyio/goproxy.git && \
     cd goproxy && \
     make
 
+RUN git clone https://github.com/GoogleCloudPlatform/govanityurls.git && \
+    cd govanityurls && \
+    go build -ldflags="-extldflags=-static"
 
+
+FROM alpine:3.21
+COPY --from=builder /app/goproxy/bin/goproxy /usr/local/bin/goproxy
+COPY --from=builder /app/govanityurls/govanityurls /usr/local/bin/govanityurls
+
+
+# golang and git are required for goproxy
 RUN mkdir -p /run/nginx && \
-    mkdir -p /etc/nginx/certs && \
-    apk add --no-cache nginx
+    apk add go git nginx
 
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY pegasus.crt /etc/nginx/certs/pegasus.crt
-COPY pegasus.key /etc/nginx/certs/pegasus.key
+
 
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 CMD ["/entrypoint.sh"]
-
