--- a/docker-compose/nginx.conf
+++ b/docker-compose/nginx.conf
@@ -30,15 +30,15 @@ http {
     include /etc/nginx/conf.d/*.conf;
     server {
     listen 80;
-    listen 443 ssl;
+    #listen 443 ssl;
 
     server_name pegasus-cloud.com;
 
-    ssl_certificate /etc/nginx/certs/pegasus.crt;
-    ssl_certificate_key /etc/nginx/certs/pegasus.key;
+    #ssl_certificate /etc/nginx/certs/pegasus.crt;
+    #ssl_certificate_key /etc/nginx/certs/pegasus.key;
 
     location /aes {
-            proxy_pass http://govanityurls:8080;
+            proxy_pass http://127.0.0.1:8080;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
