build: refactor proxy setup for improved network configuration
- Modify `proxy-up` to use `cat` and run `docker-compose` with stdin input
- Add a new target `proxy-up-pegasus-network` in the Makefile to include the `pegasus-cloud-network` for `trust-cloud-proxy`
- Remove commented-out `pegasus-cloud-network` entry from `docker-compose.yaml` and adjust `proxy-network` to an empty dictionary format

Signed-off-by: Jimmy Chuang <ogre0403@gmail.com>

--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -7,8 +7,7 @@ services:
       - SRC_REPO=${SRC_REPO}
       - DEST_REPO=${DEST_REPO}
     networks:
-      proxy-network:
-      #pegasus-cloud-network:
+      proxy-network: {}
     ports:
       - "8078:8078"
 
