chore: revise devcontainer setup and enhance Makefile for Docker use
- Add terminal settings for Linux with Zsh in devcontainer configuration
- Change GOPROXY URL to use localhost in devcontainer configuration
- Remove unused docker run arguments in devcontainer configuration
- Introduce `REPO_TOKEN` variable in the Makefile with a replacement placeholder
- Add project name specification for Docker Compose in Makefile targets `proxy-up` and `proxy-up-pegasus-network`
- Modify instructions to accommodate GitLab in README.md and update proxy usage examples
- Correct `REPO_TOKEN` substitution in the docker-compose environment file

Signed-off-by: Jimmy Chuang <ogre0403@gmail.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,21 +19,22 @@
 				"golang.Go",
 				"GitHub.copilot",
 				"isudox.vscode-jetbrains-keybindings",
-			]
+			],
+			"settings": {
+				"terminal.integrated.defaultProfile.linux": "zsh",
+				"terminal.integrated.profiles.linux": {
+					"zsh": {
+						"path": "/bin/zsh"
+					}
+				}
+			}
+		},
+		"containerEnv": {
+			"GOPROXY": "https://proxy.golang.org,http://localhost:8078",
+			"GOSUMDB": "off",
+			"SRC_REPO": "pegasus-cloud.com/aes",
+			"DEST_REPO": "github.com/trusted-cloud",
+			"REPO_TOKEN": ""
 		}
-	},
-	"containerEnv": {
-		"GOPROXY": "https://proxy.golang.org,http://goproxy-devcontainer:8080",
-		"GOSUMDB": "off",
-		"SRC_REPO": "pegasus-cloud.com/aes",
-		"DEST_REPO": "github.com/trusted-cloud",
-		"REPO_TOKEN": "",
-	},
-
-
-	// docker args to run the container, connect to KinD network
-	"runArgs": [
-		"--network=kind",
-		"--name=goproxy-devcontainer"
-	]
+	}
 }
