--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,3 +1,3 @@
-REPO_TOKEN=${GITHUB_OGRE0403_PAT:-replace-your-token-for-repo}
+REPO_TOKEN=${REPO_TOKEN:-replace-your-token-for-repo}
 SRC_REPO=${SRC_REPO:-pegasus-cloud.com/aes}
 DEST_REPO=${DEST_REPO:-github.com/trusted-cloud}
